# rsdiffy

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  assets.rs  db.rs  main.rs  registry.rs  server.rs  session.rs  threads.rs  tours.rs  unescape.rs
crates/cli/src/routes/: actions.rs  diff.rs  gitlab.rs  info.rs  mod.rs  review.rs  tours.rs  tree.rs
crates/git/: Cargo.toml
crates/gitlab/: Cargo.toml
crates/parser/: Cargo.toml
ui/: index.html
ui/assets/: _basePickBy-C297ecd-.js  _baseUniq-9nzhHp65.js  _index-BtalIiDo.js  angular-html-cuNSjsh1.js  angular-ts-B_UMUHAh.js  api-XaTyJGl5.js  apl-Dh-XPQfw.js  arc-CGbCBKeA.js  architecture-PBZL5I3N-CyrhpUu_.js  architectureDiagram-2XIMDMQ5-BERfqDd4.js  astro-B5OWrcj4.js  blade-D-jQ3Q4S.js  blockDiagram-WCTKOSBZ-DrvWxYu0.js  bsl-CLm5SK7j.js  c-CNWOBXi1.js  c4Diagram-IC4MRINW-CosUaDJJ.js  cairo-p-uyPLb1.js  channel-C0gTz5wZ.js  chunk-4BX2VUAB-CoBUD9LY.js  chunk-55IACEB6-BBAee24K.js  chunk-7E7YKBS2-BAtZl2lQ.js  chunk-7R4GIKGN-BhztuCjg.js  chunk-C72U2L5F-CpVg386V.js  chunk-EGIJ26TM-Do9gIZXq.js  chunk-FMBD7UC4-B6tCWajk.js  chunk-GEFDOKGD-Zo5CYxEW.js  chunk-GLR3WWYH-D8MY3iNW.js  chunk-HHEYEP7N-Cg6CP6Z1.js  chunk-JSJVCQXG-CdzG5_G4.js  chunk-KX2RTZJC-CXMGqjSn.js  chunk-KYZI473N-Be1CXAEC.js  chunk-L3YUKLVL-B_BRgdML.js  chunk-MX3YWQON-b1ddufHF.js  chunk-NQ4KR5QH-CM4mETfD.js  chunk-O4XLMI2P-BGmLljo_.js  chunk-OZEHJAEY-DMF7-JkY.js  chunk-PQ6SQG4A-GfQbx-e5.js  chunk-PU5JKC2W-Cwbzy0rs.js  chunk-QZHKN3VN-DYbjd66n.js  (+139 more)
(+23 files in other folders)
