[package]
name = "rsdiffy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rsdiffy"
path = "src/main.rs"

[dependencies]
rsdiffy-parser = { path = "../parser" }
rsdiffy-git = { path = "../git" }
rsdiffy-gitlab = { path = "../gitlab" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rusqlite = { version = "0.35", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
open = "5"
owo-colors = "4"
rust-embed = "8"
mime_guess = "2"
sysinfo = "0.36"
regex = { workspace = true }
